policies/resource-management/require-limits.yaml
# require-labels-and-limits.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-limits
  annotations:
    policies.kyverno.io/title: Require Labels and Resource Limits
    policies.kyverno.io/category: Resource Management
    policies.kyverno.io/severity: medium
    policies.kyverno.io/description: >-
      All deployments must have resource limits defined.
spec:
  validationFailureAction: enforce
  background: true
  rules:
    - name: check-resource-limits
      match:
        any:
        - resources:
            kinds:
            - Deployment
      validate:
        message: "Resource limits are required for all containers"
        pattern:
          spec:
            template:
              spec:
                containers:
                  - resources:
                      limits:
                        memory: "?*"
                        cpu: "?*"
